--- a/recipe.css
+++ b/recipe.css
@@ -10,9 +10,9 @@ body {
             
 div.content {
     background-color: white;
-    margin: 60px 10% 80px 10%;
-    padding: 0px 30px 30px 30px;
-    min-width: 350px;
+    margin: 40px 8px 40px 8px;
+    padding: 0px 8px 20px 8px;
+    /* min-width: 350px; */
     box-shadow: 0px 0px 10px 8px rgba(0,0,0,0.1);
     overflow: visible;
 }
@@ -65,18 +65,18 @@ table.info{
     width: 100%; 
     color: white;
     background-color: #6C829DC0;
-    height: 80px;
+    height: 50px;
 }
 table.info td{
     text-align:center;
     vertical-align: top;
-    font-size: 14px;
+    font-size: 12px;
 
 }
 table.info th{
     vertical-align: bottom;
     padding-bottom: 8px;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 img.info{
@@ -88,7 +88,7 @@ img.info{
 }
 
 div.col{
-    width: 45%;
+    width: 100%;
     margin-top: 20px;
 }
 
@@ -103,11 +103,12 @@ div.col{
 
 div.col1{
     display: inline-block;
-    margin-right: 10%;
+    /* margin-right: 10%; */
+    margin-bottom: 20px;
 }
 
 div.col2{
-    float: right;
+    /* float: right; */
 }
 
 div.ingredients p{
@@ -148,3 +149,40 @@ table.instructions tr{
     height: 40px;
 }
 
+/* Desktop styles */
+@media only screen and (min-width: 768px){
+    div.content {
+        margin: 60px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+        min-width: 350px;
+    }
+    table.info{
+        height: 80px;
+    }
+    table.info td{
+        font-size: 14px;
+    
+    }
+    table.info th{
+        font-size: 16px;
+    }
+    div.col{
+        width: 45%;
+    }
+
+    div.col1{
+        margin-right: 10%;
+    }
+    
+    div.col2{
+        float: right;
+    }
+}
+
+/* Very Large Screen */
+@media only screen and (min-width: 900px){
+    div.content {
+        margin: 60px auto 80px auto;
+        width: 650px;
+    }
+}
